--- a/.github/workflow/mlops-ci-workflow.yml
+++ b/.github/workflow/mlops-ci-workflow.yml
@@ -27,6 +27,6 @@ jobs:
           pip install -r requirements.txt
           pip install pytest
 
-      - name: Run tests
-        run: |
-          pytest tests/
+      # - name: Run tests
+      #   run: |
+      #     pytest tests/
