--- a/.github/workflows/07-expression.yml
+++ b/.github/workflows/07-expression.yml
@@ -1,4 +1,5 @@
 name: 07 - Using Expressions
+run-name: 07 - Using Expressions | DEBUG = ${{ inputs.debug && 'ON' || 'OFF'}}
 
 on:
   push:
@@ -17,7 +18,7 @@ jobs:
         if: ${{ inputs.debug }}
         run: |
           echo "Triggered by ${{ github.event_name }}"
-          echo "Brach: ${{ github.ref }}"
+          echo "Branch: ${{ github.ref }}"
           echo "Commit SHA: ${{ github.sha }}"
           echo "Runner OS: ${{ runner.os }}"
       - name: "[debug] Print when triggered from main"
